// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TerminalWritable writes a debug message 1`] = `
Object {
  "debug": "test message",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalWritable writes a message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalWritable writes a verbose message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message",
  "warning": "",
}
`;

exports[`TerminalWritable writes a warning message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]test message[default]",
}
`;

exports[`TerminalWritable writes an error message 1`] = `
Object {
  "debug": "",
  "error": "[red]test message[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;
